[gd_scene load_steps=11 format=3 uid="uid://ctanlnasi56lx"]

[ext_resource type="Script" path="res://scenes/ui/search_panel.gd" id="1_2fpmc"]
[ext_resource type="Shader" path="res://shaders/dot_matrix.gdshader" id="1_tqm4v"]
[ext_resource type="Script" path="res://scenes/ui/search_panel_popup.gd" id="1_xao3b"]
[ext_resource type="Texture2D" uid="uid://csuar07pb12et" path="res://assets/tex_lit.png" id="2_rwi21"]
[ext_resource type="Texture2D" uid="uid://dg7xfxdymlqdl" path="res://assets/tex_unlit.png" id="3_8e4w4"]
[ext_resource type="Texture2D" uid="uid://mt7pueeb0ox4" path="res://icon.svg" id="4_jngdk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tnj5b"]
bg_color = Color(0.231373, 0.376471, 0.462745, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.231373, 0.376471, 0.462745, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Gradient" id="Gradient_r8ejr"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m23fr"]
gradient = SubResource("Gradient_r8ejr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fafj0"]
shader = ExtResource("1_tqm4v")
shader_parameter/grid_size = Vector2(16, 9)
shader_parameter/lit_texture = ExtResource("2_rwi21")
shader_parameter/unlit_texture = ExtResource("3_8e4w4")
shader_parameter/mask_texture = SubResource("GradientTexture2D_m23fr")

[node name="SearchPanelPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xao3b")

[node name="SearchPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tnj5b")
script = ExtResource("1_2fpmc")

[node name="SearchHBox" type="HBoxContainer" parent="SearchPanel"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="SearchPanel/SearchHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="SearchPanel/SearchHBox/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SearchPanel/SearchHBox/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="SearchInfoHBox" type="HBoxContainer" parent="SearchPanel/SearchHBox/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SearchEdit" type="LineEdit" parent="SearchPanel/SearchHBox/PanelContainer/MarginContainer/VBoxContainer/SearchInfoHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchButton" type="Button" parent="SearchPanel/SearchHBox/PanelContainer/MarginContainer/VBoxContainer/SearchInfoHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelButton"
text = "Search
"

[node name="SearchResultContainer" type="ScrollContainer" parent="SearchPanel/SearchHBox/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SearchResultVBox" type="VBoxContainer" parent="SearchPanel/SearchHBox/PanelContainer/MarginContainer/VBoxContainer/SearchResultContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectedObjectInfo" type="VBoxContainer" parent="SearchPanel/SearchHBox"]
layout_mode = 2

[node name="Preview" type="TextureRect" parent="SearchPanel/SearchHBox/SelectedObjectInfo"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_fafj0")
custom_minimum_size = Vector2(768, 432)
layout_mode = 2
texture = ExtResource("4_jngdk")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="SearchPanel/SearchHBox/SelectedObjectInfo"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SearchPanel/SearchHBox/SelectedObjectInfo/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Description" type="Label" parent="SearchPanel/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 1
text = "Some description."
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SearchPanel/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer/Description"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -169.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="DeleteButton" type="Button" parent="SearchPanel/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer/Description/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Delete"

[node name="CancelButton" type="Button" parent="SearchPanel/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer/Description/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"LabelButton"
text = "Cancel"

[node name="OkButton" type="Button" parent="SearchPanel/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer/Description/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"LabelButton"
text = "     OK     "
